<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:layout_marginEnd="18dp"
        android:gravity="center"
        android:text="43-P"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/button4"
        android:layout_width="102dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:text="@string/aston"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="102dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:text="@string/Haas"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:layout_marginEnd="18dp"
        android:gravity="center"
        android:text="57-P"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button2"
        android:layout_width="102dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="5dp"
        android:text="@string/Redbull"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:layout_marginEnd="18dp"
        android:gravity="center"
        android:text="86-P"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/f1AnaKirmizi"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/great_vibes"
            android:text="@string/formula_1"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="142dp" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="226dp"
        android:layout_height="191dp"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/f1_main1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="413dp"
        android:layout_height="37dp"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:text="@string/f1_takimler_sampiyoni"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/button"
        android:layout_width="102dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="5dp"
        android:text="@string/ferrari"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:layout_marginEnd="18dp"
        android:gravity="center"
        android:text="106-P"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/haberler"
        android:textColor="@color/white"
        app:chipBackgroundColor="@color/f1KoyuKirmizi"
        app:layout_constraintEnd_toStartOf="@+id/chip6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f1_magaza"
        android:textColor="@color/white"
        app:chipBackgroundColor="@color/f1KoyuKirmizi"
        app:layout_constraintEnd_toStartOf="@+id/chip7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chip5"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yayin_akisi"
        android:textColor="@color/white"
        app:chipBackgroundColor="@color/f1KoyuKirmizi"
        app:layout_constraintEnd_toStartOf="@+id/chip8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chip6"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hakkında"
        android:textColor="@color/white"
        app:chipBackgroundColor="@color/f1KoyuKirmizi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chip7"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uye_ol"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/giris_yap"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="410dp"
        android:layout_height="57dp"
        android:text="@string/canlı_yayın"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="394dp"
        android:layout_height="200dp"
        android:text="@string/soz"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip6" />


</androidx.constraintlayout.widget.ConstraintLayout>